...
                text =
                    when (filter) {
                        AddToListFilter.ALL ->
                            "ALL"

                        AddToListFilter.SERIES ->
                            "SERIES"

                        AddToListFilter.ISSUES ->
                            "ISSUES"
                    },
                selected = filter == selectedFilter,
                onClick = {
                    onFilterSelected(filter)
                },
                modifier = Modifier.weight(1f)
...
