...
                contentDescription = null,
                tint = ComicInk,
                modifier = Modifier.size(25.dp)
            )

            Text(
                text = "Search issues or series",
                modifier = Modifier.padding(start = 10.dp),
                style = MaterialTheme.typography.bodyLarge
                    .copy(
                        fontWeight = FontWeight.Medium
                    ),
                color = ComicInk
...
